# markitdown-plasmate

./: .gitignore  README.md  pyproject.toml
src/markitdown_plasmate/: __about__.py  __init__.py  _plugin.py
tests/: test_plasmate_converter.py
